{
  "version": 4,
  "terraform_version": "1.15.6",
  "serial": 17,
  "lineage": "0d75b033-3766-f3b8-4b1f-87906ce1c7be",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_address",
      "name": "mqtt_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "35.207.44.241",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2026-06-14T05:10:27.355-07:00",
            "id": "projects/metric-link/regions/us-east1/addresses/metric-link-ip-us-east1-mqtt",
            "label_fingerprint": "42WmSpB8rSM=",
            "name": "metric-link-ip-us-east1-mqtt",
            "network_tier": "STANDARD",
            "prefix_length": 0,
            "project": "metric-link",
            "region": "us-east1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/metric-link/regions/us-east1/addresses/metric-link-ip-us-east1-mqtt",
            "users": [
              "https://www.googleapis.com/compute/v1/projects/metric-link/zones/us-east1-b/instances/metric-link-vm-us-east1-mqtt"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.external.gcloud_config"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "mqtt_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80",
                  "8883"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2026-06-14T05:10:48.600-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/metric-link/global/firewalls/metric-link-firewall-allow-mqtt",
            "log_config": [],
            "name": "metric-link-firewall-allow-mqtt",
            "network": "https://www.googleapis.com/compute/v1/projects/metric-link/global/networks/metric-link-vpc",
            "priority": 1000,
            "project": "metric-link",
            "self_link": "https://www.googleapis.com/compute/v1/projects/metric-link/global/firewalls/metric-link-firewall-allow-mqtt",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "metric-link-mqtt-broker"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "data.external.gcloud_config",
            "google_compute_network.mqtt_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "ssh_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2026-06-14T06:44:14.589-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/metric-link/global/firewalls/metric-link-firewall-allow-ssh",
            "log_config": [],
            "name": "metric-link-firewall-allow-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/metric-link/global/networks/metric-link-vpc",
            "priority": 1000,
            "project": "metric-link",
            "self_link": "https://www.googleapis.com/compute/v1/projects/metric-link/global/firewalls/metric-link-firewall-allow-ssh",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "data.external.gcloud_config",
            "google_compute_network.mqtt_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "mqtt_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/metric-link/global/networks/metric-link-vpc",
            "mtu": 0,
            "name": "metric-link-vpc",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "numeric_id": "2103303186470347997",
            "project": "metric-link",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/metric-link/global/networks/metric-link-vpc"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.external.gcloud_config"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "mqtt_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2026-06-14T05:10:48.788-07:00",
            "gateway_address": "10.0.1.1",
            "id": "projects/metric-link/regions/us-east1/subnetworks/metric-link-subnet-us-east1",
            "ip_cidr_range": "10.0.1.0/24",
            "name": "metric-link-subnet-us-east1",
            "network": "https://www.googleapis.com/compute/v1/projects/metric-link/global/networks/metric-link-vpc",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "metric-link",
            "purpose": "PRIVATE",
            "region": "us-east1",
            "self_link": "https://www.googleapis.com/compute/v1/regions/us-east1/subnetworks/metric-link-subnet-us-east1",
            "stack_type": "IPV4_ONLY"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.external.gcloud_config",
            "google_compute_network.mqtt_vpc"
          ]
        }
      ]
    }
  ]
}